# OptimalCardiacTractography

./: README.md
algorithm/defs/: settings_def.h
algorithm/fileIO/: CMakeLists.txt  C_ReadAnalyze75.cpp  C_ReadAnalyze75.h  C_ReadDicomDiffInfo.cpp  C_ReadDicomDiffInfo.h  C_getDicomFromDirectory.cpp  C_getDicomFromDirectory.h  C_load_fiber.cpp  C_maskMaker.cpp  C_maskMaker.h  C_readDicomDiffData.cpp  C_sort_files.cpp  C_sort_files.h  C_tensorMaker.h
algorithm/synthetic/: CMakeLists.txt  C_synthetic_DWI.cpp  C_synthetic_DWI_LV.cpp  C_synthetic_DWI_LV.h  C_synthetic_DWI_cylinder.cpp  C_synthetic_DWI_patho.cpp  C_tensorMaker.cpp
algorithm/toolbox/: CMakeLists.txt  C_kmean2D.cpp  C_kmean2D.h  C_kmean3D.cpp  C_thread_spline.cpp  C_thread_spline.h  C_toolbox.cpp  C_toolbox.h  C_toolbox_PCA_3D.cpp  C_toolbox_PCA_3D.h  C_toolbox_SVD.cpp  C_toolbox_eigen_sym.cpp  C_toolbox_eigen_sym.h  C_toolbox_integrate.cpp  C_toolbox_rand2.cpp  C_toolbox_rand2.h  C_toolbox_spline.cpp  C_toolbox_spline.h
algorithm/tractography/: CMakeLists.txt  C_ICM.cpp  C_ICM.h  C_SA.cpp  C_SC.cpp  C_SC.h  C_bundle.cpp  C_cooling_schedule.cpp  C_cooling_schedule.h  C_energy.cpp  C_energy.h  C_graph.cpp  C_graph.h  C_measure.cpp  C_measure.h  C_minimization.cpp  C_minimization.h  C_move.cpp  C_move.h  C_point_array_data.cpp  C_streamline.cpp  C_temperature.cpp  C_temperature.h  C_thread_deltaU_move_vertex.cpp  C_thread_init_energy.cpp  C_thread_init_energy.h  C_toolbox_interpolate.cpp
experiments/dataCreator/: CMakeLists.txt  main.cpp  settings_volume.h
experiments/measure/curvatureDistribution/: CMakeLists.txt  C_bundle.h  C_test.cpp  main.cpp
experiments/measure/fiberBulkBoundingBox/: CMakeLists.txt  C_bundle.cpp  C_crop.cpp  C_measure_spline_synthetic.cpp  C_measure_spline_synthetic.h  C_measure_synthetic.cpp  C_parametric_comparison.cpp  C_spline.cpp  C_test.cpp  main.cpp
experiments/measure/fiberBulkBoundingBox/dataTest/: ICM_MOVE2_alpha_0.2_beta_0.5_sigma_0.375_phi0_0.5_phi1_0.5_radius_2_nbInterpol_1_M_0.fibHDR  SA_MOVE_1_U_15_alpha_0.2_beta_0.5_sigma_0.375_t0_1.5708_phi0_0.5_phi1_0.5_iter_96000_Tinit_0.9_Tend_0.04_M_100.fibHDR  SA_MOVE_1_U_15_alpha_0.2_beta_0.5_sigma_0.375_t0_1.5708_phi0_0.5_phi1_0.5_iter_96000_Tinit_0.9_Tend_0.04_M_100.fibSRC  SC_MOVE_12_U_15_alpha_0.2_beta_0.5_sigma_0.375_t0_1.5708_phi0_0.5_phi1_0.5_iter_96000_Tinit_1.035_Tend_0.04_M_100.fibSRC
experiments/measure/fiberBulkConvex/: CMakeLists.txt  main.cpp
experiments/measure/fiberBulkConvex/dataTest/: ICM_MOVE2_alpha_0.2_beta_0.5_sigma_0.375_phi0_0.5_phi1_0.5_radius_2_nbInterpol_1_M_0.fibSRC  (+3 more)
experiments/measure/fiberSimilarity/: CMakeLists.txt  main.cpp
experiments/measure/graphBoundaries/: CMakeLists.txt  C_crop.cpp  C_crop.h  C_measure_synthetic.cpp  C_parametric_comparison.cpp  C_spline.cpp  C_test.h  main.cpp
experiments/measure/meanFiberError/: CMakeLists.txt  C_parametric_comparison.h  C_spline.h  main.cpp
experiments/measure/meanPosition/: CMakeLists.txt  C_bundle.cpp  C_measure_spline_synthetic.cpp  C_measure_synthetic.h  main.cpp
experiments/multiscale/multiScaleSyntheticHeart/: CMakeLists.txt  C_thread_multiscale.cpp  C_thread_multiscale.h  main.cpp  multiScaleSyntheticHeart0.pbs  multiScaleSyntheticHeart1.pbs  multiScaleSyntheticHeart1_bis.pbs  multiScaleSyntheticHeart2.pbs
experiments/multiscale/multiscaleHeartAnaTensorJHU/: CMakeLists.txt  C_thread_multiscale.cpp  C_thread_multiscale.h  main.cpp  multiscaleHeartAnaTensorJHU.pbs
experiments/rigidFiberExtractionOnDicom/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  C_process.cpp  C_process.h  C_sampling.h  C_thread.cpp  rawData.h
visu/puffinVisu/: CMakeLists.txt  C_visu_IO.cpp  C_visu_IO.h  C_visu_draw.cpp  C_visu_draw.h  main.cpp  puffinDef.h
visu/puffinVisu/data/: SA_MOVE_100_alpha_1.2_iter_64000_Tinit_14.7334_Tend_0.111208_M.fibHDR  SA_MOVE_100_alpha_1.2_iter_64000_Tinit_14.7334_Tend_0.111208_M.fibSRC  SA_MOVE_200_alpha_1.2_iter_32000_Tinit_12.0101_Tend_0.388949_M.fibHDR  SA_MOVE_200_alpha_1.2_iter_32000_Tinit_12.0101_Tend_0.388949_M.fibSRC  beamFiber.fibHDR  beamFiber.fibSRC  circleFiber.fibHDR  circleFiber.fibSRC  dummy.vtk  randFiber.fibHDR  randFiber.fibSRC
visu/puffinVisuBall/: CMakeLists.txt  C_visu_IO.cpp  C_visu_IO.h  C_visu_draw.cpp  main.cpp  puffinDef.h  puffinVisuBall.layout
visu/puffinVisuBall/binCmake/: SA_MOVE_1_SYNTHETIC_HEART_U16_Tinit_2.93956_Tend_0.0199605_nbiter_64000_alpha_0.2_beta_0.5_sigma_0.375_Niterpol_1_radius_3_pyramidLevel_1_DWI.fibSRC  SA_MOVE_1_SYNTHETIC_HEART_U16_Tinit_3.12906_Tend_0.0540666_nbiter_64000_alpha_0.2_beta_0.5_sigma_0.375_Niterpol_1_radius_1.5_pyramidLevel_0_DWI.fibHDR  SA_MOVE_1_SYNTHETIC_HEART_U16_Tinit_3.12906_Tend_0.0540666_nbiter_64000_alpha_0.2_beta_0.5_sigma_0.375_Niterpol_1_radius_1.5_pyramidLevel_0_DWI.fibSRC  puffinVisu3  puffinVisuBall  puffinVisuDetail
visu/puffinVisuBall/lib/include/: C_ReadAnalyze75.h  C_ReadDicomDiffInfo.h  C_SA.h  C_SC.h  C_WriteDicomDiffInfo.h  C_cooling_schedule.h  C_energy.h  C_graph.h  C_kmean3D.h  C_load_fiber.h  C_maskMaker.h  C_measure.h  C_minimization.h  C_move.h  C_old_graph_from_rawData.h  C_parametric_comparison.h  C_point_array_data.h  C_readDicomDiffData.h  C_sampling.h  C_sort_files.h  C_streamline.h  C_synthetic_DWI.h  C_synthetic_DWI_cylinder.h  C_synthetic_DWI_patho.h  C_temperature.h  C_tensorMaker.h  C_thread.h  C_thread_deltaU_move_vertex.h  C_toolbox_SVD.h  C_toolbox_integrate.h  C_toolbox_interpolate.h  C_writeDicomDiffData.h  MACRO_DEF.h  rawData.h  settings_def.h  struct.h
visu/puffinVisuDetail/: CMakeLists.txt  C_visu_IO.cpp  C_visu_IO.h  C_visu_draw.cpp  C_visu_draw.h  main.cpp  puffinDef.h
visu/puffinVisuDetailConvex/: CMakeLists.txt  C_visu_IO.cpp  C_visu_IO.h  C_visu_draw.cpp  main.cpp  puffinDef.h
visu/puffinVisuSlice/: CMakeLists.txt  C_visu_IO.cpp  C_visu_IO.h  C_visu_draw.cpp  main.cpp  puffinDef.h
visu/puffinVisuTensor/: CMakeLists.txt  C_visu_IO.cpp  C_visu_IO.h  C_visu_draw.cpp  C_visu_draw.h  main.cpp  puffinDef.h
